# pyproject.toml
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "numpy"]

[project]
authors = [
  {name = "Thomas Jaeken", email = "tj2022@hw.ac.uk"},
] 
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
] 
description = "Package to identify correlated single photon detection events." 
name = "tomtag" # as it would appear on PyPI
readme = "README.md" 
version = "0.09" 

[project.urls]
"Bug Tracker" = "https://github.com/Thomas-Jaeken/tomtag/issues"
"Homepage" = "https://github.com/Thomas-Jaeken/tomtag"

[pypi]
